--- a/src/components/ProfileSettingsForm/profileSettings.module.css
+++ b/src/components/ProfileSettingsForm/profileSettings.module.css
@@ -17,9 +17,7 @@
   /* border */
   border: 1px solid #afb1b6;
   border-radius: 8px;
-  margin-bottom: 10px;
-  margin-left: 6px;
-  margin-right: 6px;
+  margin-bottom: 16px;
 }
 
 .profileSettingsButton {
@@ -34,7 +32,7 @@
   margin-right: 25%;
 }
 
-.settings-background {
+.settingsBackground {
   background-color: var(--very-light-background);
   border-radius: 8px 8px 8px 8px;
   display: flex;
@@ -48,8 +46,6 @@
 
 .labelStyle {
   font-weight: 500;
-  margin-left: 6px;
-  margin-right: 6px;
 }
 
 .buttons {
